# gnucash-utilities

./: LICENSE  README.md  pyproject.toml
helper-scripts/: Pipfile  convert-payoneer-dates.py  importar-nota-de-corretagem-inter.py  importar-nota-de-corretagem-schwab.py  importar-nota-de-corretagem-tdameritrade.py
helper-scripts/IR/: auxiliar-data.yaml  ir.py  pyproject.toml  usdbrl.csv
reports/: investment-sum-per-account.sql  report-list.md
